--- a/package.json
+++ b/package.json
@@ -8,5 +8,14 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@elastic/elasticsearch": "^8.13.1",
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
+    "elasticsearch": "^16.7.3",
+    "express": "^4.19.2",
+    "passport": "^0.7.0",
+    "passport-oauth2": "^1.8.0"
+  }
 }
